--- a/myflaskapp/templates/home.html
+++ b/myflaskapp/templates/home.html
@@ -1,6 +1,9 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-HOME
+<div class="jumbotron text-center">
+    <h1>Welcome to MyFlaskApp</h1>
+    <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, dicta cum minus neque alias, incidunt commodi aspernatur quo iure, natus ab. Architecto harum, blanditiis assumenda commodi ex esse aspernatur perferendis?</p>
+</div>
 
 {% endblock %}
