--- a/myflaskapp/templates/includes/_navbar.html
+++ b/myflaskapp/templates/includes/_navbar.html
@@ -20,6 +20,9 @@
           <li>
             <a class="nav-link" href="/register">Register</a>
           </li>
+          <li>
+            <a class="nav-link" href="/login">Login</a>
+          </li>
         </ul>
       </div>
     </div>
