--- a/mongoengine/templates/index.html
+++ b/mongoengine/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <h1>User</h1>
-    <form method="POST" action="">
+    <form method="POST" action="/login">
         <div class="form-group">
             <label>Email</label>
             <input type="text" name="email" class="form-control" placeholder="email">
