--- a/mongoengine/templates/post.html
+++ b/mongoengine/templates/post.html
@@ -7,5 +7,15 @@
             <li class="list-group-item">{{user.email}}</li>
         {% endfor %}
     </ul>
+    <h1>Post</h1>
+    <form method="POST" action="/post">
+        <div class="form-group">
+            <label>Title</label>
+            <input type="text" name="title" class="form-control" placeholder="title">
+        </div>
+        <div class="form-group">
+            <input type="submit" name="submit" class="btn btn-primary" value="Submit">
+        </div>
+    </form>
 
 {% endblock %}
