--- a/mongoengine/templates/delete_post.html
+++ b/mongoengine/templates/delete_post.html
@@ -1,18 +1,14 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-    <h1>Edit Post</h1>
-    <form method="POST" action="/edit">
+    <h1>Delete Post</h1>
+    <form method="POST" action="/delete">
         <div class="form-group">
-            <label>Title to change</label>
-            <input type="text" name="title1" class="form-control" placeholder="title1">
+            <label>Title</label>
+            <input type="text" name="title" class="form-control" placeholder="title">
         </div>
         <div class="form-group">
-            <label>Change to </label>
-            <input type="text" name="title2" class="form-control" placeholder="title2">
-        </div>
-        <div class="form-group">
-            <input type="submit" name="submit" class="btn btn-primary" value="Submit">
+            <input type="submit" name="submit" class="btn btn-primary" value="Delete">
         </div>
     </form>
 
